--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,13 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
+
+def file = rootProject.file("keys.properties")
+def props = new Properties()
+props.load(new FileInputStream(file))
 
 android {
     compileSdk 30
@@ -17,6 +23,9 @@ android {
     }
 
     buildTypes {
+        all {
+            buildConfigField("String", "API_KEY", props.getProperty("API_KEY"))
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -53,4 +62,8 @@ dependencies {
     // Rx.
     implementation "io.reactivex.rxjava3:rxjava:3.1.1"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    // Dagger-Hilt.
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
 }
